# MLFD

./: .gitignore  .gitmodules  .swp  Dockerfile  LICENSE  README.md  Regressionsmass.ipynb  \  adult_analysis.ipynb  adult_ml_results.p  adult_overfitted_ml_results.p  classifier_example.py  computer.py  constants.py  fd_imputer.py  fd_imputer_analysis.ipynb  get_binaries.py  minimal_dependencies.md  ml_afd.py  mlfd.ipynb  nursery_analysis.ipynb  plotter.py  repair_fd_imputer.ipynb  requirements.txt  setup.py  test_fd_imputer.py
.ipynb_checkpoints/: learn-columnTransformer-checkpoint.ipynb  mlfd-checkpoint.ipynb
MLFD_fd_detection/: README.md
MLFD_fd_detection/data/: abalone.csv  balance-scale.csv  bridges.csv  chess.csv  echocardiogram.csv  hepatitis.csv  horse.csv  (+2 more)
cleaning_inspector/: main.py  pyproject.toml
conf/: conda-mlfd-environment.yml
figures/: adult_mse_ml_fd.eps
lib/: constants.py  dep_detector.py  explainers.py  fd_imputer.py  helpers.py  imputer.py  library.py  optimizer.py  plot_utils.py  shap.py  shap_lib.py  test_dep_detector.py  test_explainers.py  test_fd_imputer.py  test_helpers.py  test_imputer.py  test_library.py  test_optimizer.py
oral_exam/: presentation.blg  presentation.nav  presentation.run.xml  presentation.snm  presentation.tex
performance-measure/: .README.md.swp  README.md
thesis/: .cover.tex.swp  .main.tex.swp  Bib.bib  abstract.tex  appendix.tex  cover.tex  definition.tex  discussion.tex  execution.tex  experiments.tex  introduction.tex  main.blg  main.lof  main.lot  main.run.xml  main.synctex(busy)  main.tex  theory.tex
(+149 files in other folders)
